fix image squish on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,8 @@ body {
 
 img {
   border-radius: 8px;
+  object-fit: contain;
+  width: 100%;
 }
 
 .bottom {
